feat: introduce epublib-tools module, add DesktopUtil, and expand EpubWriter test coverage.